// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should dispatch action 1`] = `
Array [
  Object {
    "type": "AN_ACTION",
  },
]
`;

exports[`should execute fetch data 1`] = `
Array [
  Object {
    "type": "FETCH_DATA_SUCCESS",
  },
]
`;
